--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"eslint-config-next": "13.4.1",
 		"framer-motion": "^10.12.8",
 		"next": "^13.4.2",
+		"next-auth": "^4.22.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.8.0",
@@ -25,6 +26,7 @@
 	"devDependencies": {
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.23",
+		"prisma": "^4.15.0",
 		"tailwindcss": "^3.3.2"
 	}
 }
