--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@next/font": "13.4.1",
+		"@prisma/client": "^4.15.0",
 		"@types/node": "20.1.0",
 		"@types/react": "18.2.6",
 		"@types/react-dom": "18.2.4",
