--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"framer-motion": "^10.12.8",
 		"next": "^13.4.2",
 		"next-auth": "^4.22.1",
+		"nodemailer": "^6.9.3",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.8.0",
