updated packages and config files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
 		"**/*.ts",
 		"**/*.tsx",
 		".next/types/**/*.ts",
-		"lib/nodemailer.js"
+		"lib/nodemailer.js",
+		"lib/github/index.ts"
 	],
 	"exclude": ["node_modules"]
 }
