--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"next": "^13.4.2",
 		"next-auth": "^4.22.1",
 		"nodemailer": "^6.9.3",
+		"octokit": "^2.0.19",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.8.0",
