--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
 		"@types/node": "20.1.0",
 		"@types/react": "18.2.6",
 		"@types/react-dom": "18.2.4",
+		"contentlayer": "^0.3.3",
+		"date-fns": "^2.30.0",
 		"eslint": "8.40.0",
 		"eslint-config-next": "13.4.1",
 		"framer-motion": "^10.12.8",
+		"rehype-autolink-headings": "^6.1.1",
+		"rehype-pretty-code": "^0.9.2",
+		"rehype-slug": "^5.1.0",
+		"remark-gfm": "^3.0.1",
 		"next": "^13.4.2",
 		"next-auth": "^4.22.1",
+		"next-contentlayer": "^0.3.3",
 		"nodemailer": "^6.9.3",
 		"octokit": "^2.0.19",
 		"react": "18.2.0",
