--- a/package.json
+++ b/package.json
@@ -19,10 +19,6 @@
 		"eslint": "8.40.0",
 		"eslint-config-next": "13.4.1",
 		"framer-motion": "^10.12.8",
-		"rehype-autolink-headings": "^6.1.1",
-		"rehype-pretty-code": "^0.9.2",
-		"rehype-slug": "^5.1.0",
-		"remark-gfm": "^3.0.1",
 		"next": "^13.4.2",
 		"next-auth": "^4.22.1",
 		"next-contentlayer": "^0.3.3",
@@ -31,9 +27,15 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.8.0",
+		"rehype-autolink-headings": "^6.1.1",
+		"rehype-pretty-code": "^0.9.2",
+		"rehype-slug": "^5.1.0",
+		"remark-gfm": "^3.0.1",
+		"shiki": "^0.14.2",
 		"typescript": "5.0.4"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.23",
 		"prisma": "^4.15.0",
