converted api calls to server actions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
 		".next/types/**/*.ts",
 		"lib/nodemailer.js",
 		"lib/github/index.js",
-		".contentlayer/generated"
+		".contentlayer/generated",
+		"contentlayer.config.js"
 	],
 	"exclude": ["node_modules"]
 }
