--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"rehype-pretty-code": "^0.9.2",
 		"rehype-slug": "^5.1.0",
 		"remark-gfm": "^3.0.1",
+		"sharp": "^0.32.4",
 		"shiki": "^0.14.2",
 		"typescript": "5.0.4",
 		"zod": "^3.21.4"
