--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/node": "20.1.0",
 		"@types/react": "18.2.6",
 		"@types/react-dom": "18.2.4",
+		"@types/react-icons": "^3.0.0",
 		"contentlayer": "^0.3.3",
 		"date-fns": "^2.30.0",
 		"eslint": "8.40.0",
