--- a/package.json
+++ b/package.json
@@ -9,31 +9,44 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.3.2",
 		"@next/font": "13.4.1",
 		"@prisma/client": "^4.15.0",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@react-email/components": "^0.0.11",
 		"@types/node": "20.1.0",
 		"@types/react": "18.2.6",
 		"@types/react-dom": "18.2.4",
-		"@types/react-icons": "^3.0.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.0.0",
 		"contentlayer": "^0.3.3",
 		"date-fns": "^2.30.0",
 		"eslint": "8.40.0",
 		"eslint-config-next": "13.4.1",
 		"framer-motion": "^10.12.8",
-		"next": "^13.4.19",
-		"next-auth": "^4.22.1",
-		"next-contentlayer": "^0.3.3",
+		"lucide-react": "^0.292.0",
+		"next": "^14.0.2",
+		"next-auth": "^4.24.5",
+		"next-contentlayer": "^0.3.4",
+		"next-themes": "^0.2.1",
 		"nodemailer": "^6.9.3",
 		"octokit": "^2.0.19",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.48.2",
 		"react-icons": "^4.8.0",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-pretty-code": "^0.9.2",
 		"rehype-slug": "^5.1.0",
 		"remark-gfm": "^3.0.1",
+		"resend": "^2.0.0",
 		"sharp": "^0.32.4",
 		"shiki": "^0.14.2",
+		"sonner": "^1.2.0",
+		"tailwind-merge": "^2.0.0",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "5.0.4",
 		"zod": "^3.21.4"
 	},
