--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
 		"@types/react-dom": "18.2.4",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
-		"contentlayer": "^0.3.3",
+		"contentlayer": "^0.3.4",
 		"date-fns": "^2.30.0",
 		"eslint": "8.40.0",
 		"eslint-config-next": "13.4.1",
 		"framer-motion": "^10.12.8",
 		"lucide-react": "^0.292.0",
-		"next": "^14.0.2",
+		"next": "^14.2.13",
 		"next-auth": "^4.24.5",
 		"next-contentlayer": "^0.3.4",
 		"next-themes": "^0.2.1",
@@ -54,6 +54,7 @@
 		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.23",
+		"prettier": "^3.3.3",
 		"prisma": "^4.15.0",
 		"tailwindcss": "^3.3.2"
 	}
