--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 		],
 		"baseUrl": ".",
 		"paths": {
-			"contentlayer/generated": ["./.contentlayer/generated"]
+			"contentlayer/generated": ["./.contentlayer/generated"],
 		}
 	},
 	"include": [
